modifica alla navbar per eliminare la voce di menu della compilazione + creata cartella Documents/compilation per i componenti

--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -28,20 +28,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link navItem-size" href="@PageRouting.DocumentCompilationPage">
-                <span class="bi bi-check2-square" aria-hidden="true"></span>
-                @if (!@IconMenuActive)
-                {
-                    <label>Documenti</label>
-                }
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link navItem-size" href="@PageRouting.TemplatePage">
                 <span class="bi bi-plus-square @biClassRules" aria-hidden="true"></span>
                 @if (!@IconMenuActive)
                 {
-                    <label>Creazione</label>
+                    <label>Template</label>
                 }
             </NavLink>
         </div>
