check box presenza

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -9,7 +9,8 @@
 }
 else
 {
-   <ReportConstructorSiteDataSection Document="@document" /> 
+   <ReportConstructorSiteDataSection Document="@document" />
+   <CompaniesPresentSection Companies="@document.Companies" /> 
 }
 
 
