--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
@@ -1,6 +1,6 @@
 ﻿@using Shared.Documents;
 
-@if(onLoading)
+@if (onLoading)
 {
     <Loading />
 }
@@ -8,13 +8,26 @@ else
 {
     <div class="card shadow mb-8 divCard">
     <div class="vstack p-8">
-       <RadzenText TextAlign="TextAlign.Center"><strong>IMPRESE PRESENTI: FIGURE RESPONSABILI, PERSONALE, FORMALE, ATTREZZATURA</strong></RadzenText> 
-        @foreach(var company in Companies)
-        {
-            <RadzenText>Impresa Esecutrice</RadzenText>
-            
-        }
-    </div>
+        <RadzenText TextAlign="TextAlign.Center"><strong>IMPRESE PRESENTI: FIGURE RESPONSABILI, PERSONALE, FORMALE,
+                ATTREZZATURA</strong></RadzenText>
+        @foreach (var company in Companies)
+            {
+                <RadzenRow>
+                    <RadzenText>Impresa Esecutrice</RadzenText>
+                    <RadzenCheckBox Value="@company.Present" Name="Presente"/>
+                    <RadzenLabel Text="Presente" Component="Presente" />
+                </RadzenRow>
+                <RadzenRow>
+                    <RadzenText>Ragione Sociale: <strong>@company.CompanyName</strong></RadzenText>
+                    <RadzenText>Sede legale: @company.Address</RadzenText>
+                </RadzenRow>
+                <RadzenRow>
+                    <RadzenText>Lavori previsti: @company.JobsDescriptions</RadzenText>
+                    <RadzenText>P. Iva: @company.VatCode</RadzenText>
+                </RadzenRow>
+
+            }
+        </div>
     </div>
 }
 
