form compilazione documento (+ risposte per domanda, assegnazione companies alle risposte, scrittura note)

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -9,7 +9,7 @@
 }
 else
 {
-    
+    <QuestionsSection Categories="document.Categories" Companies="document.Companies"/>
 }
 
 
@@ -22,7 +22,6 @@ else
 
     private DocumentModel document = new();
     private bool onLoading = false;
-
 
 
     protected override async Task OnInitializedAsync()
