--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -1,5 +1,299 @@
-﻿<h3>QuestionCompilation</h3>
+﻿@using Shared.Documents
+@using ConstructionSiteLibrary.Model.DocumentCompilation
+
+@inject DialogService DialogService
+
+<ScreenComponent @ref="screenComponent" />
+
+@* Questionario *@
+<RadzenFieldset Text="Questionario" class="questionario">
+    @foreach (var visual in visualCategories)
+    {
+        <div class="categoria pt-3">
+            <RadzenRow class="bordoInferiore" Style="justify-content:space-between !important;">
+                <RadzenColumn Size="11" Style="display:flex">
+                    <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;margin-top:0.5rem;"><strong>@CategoryText(visual.Category)</strong></RadzenText>
+                </RadzenColumn>
+                <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
+                    <RadzenButton Icon="@AccordionIcon(visual)" Variant="Variant.Text" Click="@(()=>ShowQuestions(visual))" />
+                </RadzenColumn>
+            </RadzenRow>
+        </div>
+        if (visual.ShowQuestion)
+        {
+            @foreach (var question in visual.Category.Questions)
+            {
+                <div class="margineDomande bordoDomanda">
+                    <div class="hstack">
+                        <RadzenButton Icon="photo_camera" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonPhoto" />
+                        <RadzenText>@QuestionText(visual.Category, question.Text, question.Order)</RadzenText>
+                    </div>
+                    @foreach (var answer in question.CurrentChoices)
+                    {
+                        <div class="hstack">
+                            <div>
+                                <RadzenDropDown Value="@answer" Data=@question.Choices TValue="DocumentChoiceModel" TextProperty="Value" class="selectChoice"
+                                                Change="@(args => SelectedAnswer(args, question))" />
+                            </div>
+                            @if (ShowDeleteChoiceButton(answer, question))
+                            {
+                                <div>
+                                    <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Text" class="buttonChoice"
+                                                  Click="@(()=>RemoveAnswer(question, answer))" />
+                                </div>
+                            }
+                            @if (ShowAddChoiceButton(answer, question))
+                            {
+                                <div>
+                                    <RadzenButton Icon="add" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonChoice"
+                                                  Click="@(()=>AddAnswer(question))" />
+                                </div>
+                            }
+                        </div>
+                        <div>
+                            <RadzenText TextStyle="TextStyle.Body1" onclick="@{()=>OpenCompanyListDialog(answer,question)}">@ReportedCompany(answer)</RadzenText>
+                        </div>
+
+                    }
+                    <div class="row align-content-center">
+                        <RadzenButton Text="Aggiungi note" Variant="Variant.Text" Click="@(()=>OpenNoteDialog(question))" Style="width: 170px;" />
+                    </div>
+                </div>
+            }
+        }
+    }
+</RadzenFieldset>
 
 @code {
 
+
+    [Parameter]
+    public List<DocumentCategoryModel> Categories { get; set; } = [];
+    [Parameter]
+    public List<CompanyModel> Companies { get; set; } = [];
+
+    private List<VisualCategory> visualCategories { get; set; } = [];
+
+    ScreenComponent? screenComponent;
+
+
+
+    protected override async Task OnParametersSetAsync()
+    {
+        await base.OnParametersSetAsync();
+        CreateVisualCategories();
+    }
+
+
+    private void CreateVisualCategories()
+    {
+        if (Categories is not null)
+        {
+            visualCategories = [];
+            foreach (var cat in Categories)
+            {
+                visualCategories.Add(new() { Category = cat });
+
+                foreach (var question in cat.Questions)
+                {
+                    InitCurrentChoicesList(question);
+                }
+            }
+        }
+    }
+
+    #region GestioneRisposte
+
+    private static void InitCurrentChoicesList(DocumentQuestionModel question)
+    {
+        if (question.CurrentChoices.Count == 0)
+        {
+            AddAnswer(question);
+        }
+    }
+
+    private static void AddAnswer(DocumentQuestionModel question)
+    {
+        var index = question.CurrentChoices.Count;
+        question.CurrentChoices.Add(new(){ChoiceIndex = index});
+    }
+
+    private static void RemoveAnswer(DocumentQuestionModel question, DocumentChoiceModel choice)
+    {
+        question.CurrentChoices.Remove(choice);
+    }
+
+
+
+    private string ReportedCompany(DocumentChoiceModel choice)
+    {
+        var message = "";
+        foreach (var companyId in choice.ReportedCompanyIds)
+        {
+            var companyName = Companies.Where(x => x.Id == companyId).Select(x => x.CompanyName).FirstOrDefault() ?? "";
+            message += $"{companyName}, ";
+        }
+
+        if (message.EndsWith(", "))
+        {
+            //rimuovo l'ultima virgola
+            message = message.Remove(message.Length - 2);
+        }
+
+        return message;
+    }
+
+    private async Task SelectedAnswer(object args, DocumentQuestionModel question)
+    {
+        var choice = args as DocumentChoiceModel;
+        if (choice is not null)
+        {
+            RemoveReportedCompany(choice, question);
+            if (choice.Reportable)
+            {
+                await OpenCompanyListDialog(choice, question);
+            }
+        }
+    }
+
+    private void RemoveReportedCompany(DocumentChoiceModel choice, DocumentQuestionModel question)
+    {
+        choice.ReportedCompanyIds = [];
+        question.CurrentChoices[choice.ChoiceIndex].ReportedCompanyIds = [];
+    }
+
+    #endregion
+
+    #region Gestione Dialog
+
+    private async Task OpenNoteDialog(DocumentQuestionModel question)
+    {
+        var width = screenComponent.GetScreenSize();
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+            {
+                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+                { "OnQuestionNoteChanged", EventCallback.Factory.Create<DocumentQuestionModel>(this, QuestionNotesChanged) },
+                { "Question", question},
+
+            };
+        await DialogService.OpenAsync<FormQuestionNotes>("Scrivi note", parameters: param, options: newOptions);
+    }
+
+    private async Task OpenCompanyListDialog(DocumentChoiceModel choice, DocumentQuestionModel question)
+    {
+        var width = screenComponent.GetScreenSize();
+        ChoiceReportedCompanies choiceReportedCompanies = new()
+            {
+                ReportedCompanyIds = choice.ReportedCompanyIds,
+                QuestionId = question.Id,
+                ChoiceNumber = choice.ChoiceIndex
+            };
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+            {
+                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+                { "OnCompaniesSelected", EventCallback.Factory.Create<ChoiceReportedCompanies>(this, SelectedCompanies) },
+                {"ChoiceReportedCompanies", choiceReportedCompanies},
+                { "Companies", Companies},
+
+            };
+        await DialogService.OpenAsync<FormSelectCompany>("Seleziona aziende", parameters: param, options: newOptions);
+    }
+
+
+    private void SelectedCompanies(ChoiceReportedCompanies choiceReportedCompanies)
+    {
+        foreach (var cat in visualCategories)
+        {
+            foreach (var q in cat.Category.Questions)
+            {
+                if (q.Id == choiceReportedCompanies.QuestionId)
+                {
+                    q.CurrentChoices[choiceReportedCompanies.ChoiceNumber].ReportedCompanyIds = choiceReportedCompanies.ReportedCompanyIds;
+                    break;
+                }
+            }
+        }
+
+        DialogService.Close();
+        StateHasChanged();
+    }
+
+    private void QuestionNotesChanged(DocumentQuestionModel question)
+    {
+        foreach(var cat in visualCategories)
+        {
+            foreach(var q in cat.Category.Questions)
+            {
+                if(q.Id == question.Id)
+                {
+                    q.Note = question.Note;
+                    break;
+                }
+            }
+        }
+        StateHasChanged();
+        DialogService.Close();
+    }
+
+    #endregion
+
+    #region Visualizzazione
+
+    private static string CategoryText(DocumentCategoryModel cat)
+    {
+        return cat.Order + ". " + cat.Text;
+    }
+
+    private static string QuestionText(DocumentCategoryModel cat, string questionText, int order)
+    {
+        return cat.Order + "." + order + " " + questionText;
+    }
+
+    private static void ShowQuestions(VisualCategory cat)
+    {
+        cat.ShowQuestion = !cat.ShowQuestion;
+    }
+
+    private static string AccordionIcon(VisualCategory cat)
+    {
+        return cat.ShowQuestion ? "remove" : "add";
+    }
+
+    private bool ShowAddChoiceButton(DocumentChoiceModel answer, DocumentQuestionModel question)
+    {
+        return question.CurrentChoices.IndexOf(answer) == question.CurrentChoices.Count - 1;
+    }
+
+    private bool ShowDeleteChoiceButton(DocumentChoiceModel answer, DocumentQuestionModel question)
+    {
+        return question.CurrentChoices.IndexOf(answer) != 0;
+    }
+
+    #endregion
+
+    #region Classe interna
+
+    class VisualCategory
+    {
+        public bool ShowQuestion = true;
+        public DocumentCategoryModel Category { get; set; } = new();
+    }
+
+    #endregion
 }
