--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -1,7 +1,5 @@
 ﻿@using Shared.Documents
-
 @inject DocumentsRepository DocumentsRepository
-
 
 @if (onLoading)
 {
@@ -12,21 +10,16 @@ else
     <div class="card shadow p-3 m-5">
         <ReportConstructorSiteDataSection Document="@document" />
         <CompaniesPresentSection Companies="@document.Companies" />
-        <QuestionsSection Categories="document.Categories" Companies="document.Companies" />
+        <QuestionsSection Categories="document.Categories" Companies="document.Companies" OnNoteUpdated="@QuestionNoteUpdated" />
+	    <FormQuestionAdditionalNotesList Document="@document" />
     </div>
-
 }
 
-
 @code {
-
-
     [Parameter]
     public int DocumentId { get; set; }
-
     private DocumentModel document = new();
     private bool onLoading = false;
-
 
     protected override async Task OnInitializedAsync()
     {
@@ -35,12 +28,12 @@ else
         await LoadData();
         onLoading = false;
     }
-
-
     private async Task LoadData()
     {
         document = await DocumentsRepository.GetDocumentById(DocumentId);
     }
 
-
+    private void QuestionNoteUpdated(){
+        StateHasChanged();
+    }
 }
