--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -77,7 +77,7 @@
     [Parameter]
     public List<CompanyModel> Companies { get; set; } = [];
     [Parameter]
-    public EventCallback OnNoteUpdated {get; set;}
+    public EventCallback OnStateChangeNotification {get; set;}
 
 
     private List<VisualCategory> visualCategories { get; set; } = [];
@@ -92,8 +92,8 @@
         CreateVisualCategories();
     }
 
-    private async Task NoteUpdated(){
-            await OnNoteUpdated!.InvokeAsync();
+    private async Task StateChangeNotification(){
+            await OnStateChangeNotification!.InvokeAsync();
     }
 
     private void CreateVisualCategories()
@@ -224,17 +224,16 @@
     }
 
 
-    private void SelectedCompanies()
+    private async Task SelectedCompanies()
     {
         DialogService.Close();
-        StateHasChanged();
+        await StateChangeNotification();
     }
 
-    private void QuestionNotesChanged()
+    private async Task QuestionNotesChanged()
     {
-        StateHasChanged();
         DialogService.Close();
-        NoteUpdated();
+        await StateChangeNotification();
     }
 
     #endregion
