--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -10,28 +10,72 @@
 }
 else
 {
-    <div class="vstack p-3">
-        @foreach (var reportedCompany in CompaniesQuestionsReported)
-        {
-@*             if (reportedCompany.ReportedQuestions.Any())
-            { *@
-                <RadzenText>Per: <strong>@reportedCompany.Company.CompanyName</strong></RadzenText>
-                @if (!string.IsNullOrEmpty(reportedCompany.Sign))
-                {
-                    <image src="@reportedCompany.Sign" />
-                }
-                <RadzenButton Text="Firma" Click="@(() => OpenSignaturePad(reportedCompany))" />
-                <RadzenText>Quesiti contestati</RadzenText>
-                <RadzenRow>
-                    @foreach (var questionIds in reportedCompany.ReportedQuestions)
+    <div class="vstack px-4">
+        <div class="my-4">
+            <div class="row SectionTitleDiv">
+                <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"><strong>FIRME</strong></RadzenText>
+            </div>
+            <div class="p-4 my-3 border">
+                <RadzenText Style="text-decoration:underline">Le firme di presa visione e accettazione di seguito fanno riferimento alle prescrizioni riportate nel verbale, riferite all'impresa di appartenenza e relativi subappaltatori.</RadzenText>
+            </div>
+            <div class="hstack">
+                <RadzenLabel Text="Data:" Component="Data" Style="margin-right: 8px; vertical-align: middle;" />
+                <RadzenDatePicker Value="@Document.SignDate" TValue="DateTime?" DateFormat="dd/MM/yyyy" Style="max-width:200px;" />
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="mb-1">
+                        <RadzenText></RadzenText>
+                    </div>
+                    <div class="p-4 border my-2">
+                        <RadzenText>Il C.S.E: <strong>@Document.CSE</strong></RadzenText>
+                        @if (Document.CseSignature is not null)
+                        {
+                            <div class="col-12 p-2 border">
+                            <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width" height="@Document.CseSignature.Height" style="overflow:hidden" />
+                            </div>
+                        } else
+                        {
+                           <RadzenText Text="_______________________"/>
+                        }
+                        <RadzenButton Text="Firma" Click="@(() => OpenSignaturePad(null))" class="mt-2" />
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="mb-1">
+                        <RadzenText Style="text-decoration:underline">Per presa visione e accettazione</RadzenText>
+                    </div>
+                    @foreach (var reportedCompany in CompaniesQuestionsReported)
                     {
-                        <RadzenText>@questionIds.MarkByOrder()</RadzenText>
+                        if (reportedCompany.ReportedQuestions.Any())
+                        {
+                            <div class="p-4 border my-2">
+                                <RadzenText>Per: <strong>@reportedCompany.Company.CompanyName</strong></RadzenText>
+                                @if (reportedCompany.Sign is not null)
+                                {
+                                    <div class="col-12 p-2 border">
+                                    <img src="@reportedCompany.Sign.Image" width="@reportedCompany.Sign.Width" height="@reportedCompany.Sign.Height" />
+                                    </div>
+                                }
+                                else
+                                {
+                                    <RadzenText Text="_______________________" />
+                                }
+                                <RadzenButton Text="Firma" Click="@(() => OpenSignaturePad(reportedCompany))" class="mt-2" />
+                                <div class="hstack mt-2">
+                                    <RadzenText TextStyle="TextStyle.Caption" class="mb-0">Quesiti contestati:</RadzenText>
+                                    @foreach (var questionIds in reportedCompany.ReportedQuestions)
+                                    {
+                                        <RadzenButton Variant="Variant.Text" Size="ButtonSize.Small" ButtonStyle="ButtonStyle.Info">@questionIds.MarkByOrder()</RadzenButton>
+                                    }
+                                </div>
+                            </div>
+                        }
                     }
-                </RadzenRow>
-@*             } *@
-        }
+                </div>
+            </div>
+        </div>
     </div>
-
 }
 
 
@@ -46,7 +90,6 @@ else
 
     private ScreenComponent screenComponent;
 
-    private Modale modal { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -65,13 +108,8 @@ else
     private void LoadData()
     {
         CompaniesQuestionsReported = [];
-        foreach (var company in Document.Companies)
-        {
-            CompaniesQuestionsReported.Add(new CompanyQuestionsReported()
-                {
-                    Company = company,
-                });
-        }
+
+        CompaniesQuestionsReported = Document.Companies.Select(x => new CompanyQuestionsReported() { Company = x, }).ToList();
 
         foreach (var category in Document.Categories)
         {
@@ -95,16 +133,16 @@ else
         }
     }
 
-    private async Task OpenSignaturePad(CompanyQuestionsReported cqr)
+    private async Task OpenSignaturePad(object? obj)
     {
         var width = screenComponent.ScreenSize.Width;
         var height = screenComponent.ScreenSize.Height;
-        var canvasHeight = height - 200;
-        var canvasWidth = width - 40;
+        var canvasHeight = 300;
+        var canvasWidth = width - 60;
         Console.WriteLine("Height: " + height);
 
         // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
-        var additionalStyle = $"height:{height};width:{width}px; position:static !important";
+        var additionalStyle = $"height:fit-content;width:{width}px;position:static !important";
         var newOptions = new DialogOptions
             {
                 Style = additionalStyle
@@ -114,7 +152,7 @@ else
         {
             //tra i parametri che invio al dialog creo un EventCallback da passare al componente
             { "OnSavedSignature", EventCallback.Factory.Create<Signature>(this, ShowSignature) },
-            { "ExtraObject" , cqr },
+            { "ExtraObject" , obj },
             { "CanvasHeight" , canvasHeight },
             { "CanvasWidth" , canvasWidth },
         };
@@ -127,8 +165,17 @@ else
     {
         DialogService.Close();
         var curretCompany = signature.ExtraObject as CompanyQuestionsReported;
-
-        curretCompany!.Sign = signature.Image;
+        if (curretCompany is CompanyQuestionsReported)
+        {
+            curretCompany.Sign = signature;
+        }
+        else
+        {
+            Document.CseSignature = new();
+            Document.CseSignature.Sign = signature.Image;
+            Document.CseSignature.Width = signature.Width;
+            Document.CseSignature.Height = signature.Height;
+        }
         StateHasChanged();
     }
 
@@ -138,7 +185,7 @@ else
 
         public List<CateogoryQuestionIds> ReportedQuestions = [];
 
-        public string Sign = "";
+        public Signature? Sign;
 
 
     }
