--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -31,7 +31,7 @@ else
                         @if (Document.CseSignature is not null)
                         {
                             <div class="col-12 p-2 border">
-                            <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width" height="@Document.CseSignature.Height" style="width:100%; height:100%" />
+                            <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width" height="@Document.CseSignature.Height" style="max-width:100%; height:100%" />
                             </div>
                         } else
                         {
