--- a/ConstructionSiteLibrary/Components/Companies/FormCompanies.razor
+++ b/ConstructionSiteLibrary/Components/Companies/FormCompanies.razor
@@ -3,7 +3,7 @@
 @inject CompaniesRepository CompaniesRepository
 @inject NavigationService NavigationService
 
-
+<h4>@title</h4>
 
 <RadzenTemplateForm TItem="CompanyModel" Data=@Company Submit=@Save>
     <RadzenStack class="rz-px-2">
@@ -17,7 +17,7 @@
 
             </div>
 
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
                 <RadzenFormField Text="Lavoratore autonomo" Variant="@variant" class="text-field">
                     <ChildContent>
                         <RadzenTextBox Name="SelfEmployedName" @bind-Value=@Company.SelfEmployedName />
@@ -41,7 +41,7 @@
                 </RadzenFormField>
             </div>
 
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
                 <RadzenFormField Text="Partita IVA" Variant="@variant" class="text-field">
                     <ChildContent>
                         <RadzenTextBox Name="VatCode" @bind-Value=@Company.VatCode />
@@ -59,7 +59,7 @@
                 </RadzenFormField>
             </div>
 
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
 
                 <RadzenFormField Text="Email" Variant="@variant" class="text-field">
                     <ChildContent>
@@ -78,7 +78,7 @@
                     </ChildContent>
                 </RadzenFormField>
             </div>
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
                 <RadzenFormField Text="N. REA" Variant="@variant" class="text-field">
                     <ChildContent>
                         <RadzenTextBox Name="NREA" @bind-Value=@Company.ReaNumber />
@@ -95,7 +95,7 @@
                     </ChildContent>
                 </RadzenFormField>
             </div>
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
                 <RadzenFormField Text="CCNL applicato" Variant="@variant" class="text-field">
                     <ChildContent>
                         <RadzenTextBox Name="Ccnl" @bind-Value=@Company.Ccnl />
@@ -113,14 +113,14 @@
                 </RadzenFormField>
             </div>
 
-            <div class="col" <RadzenFormField Text="Matr. INAIL" Variant="@variant" class="text-field">
+            <div class="col mt-md-0 mt-3" <RadzenFormField Text="Matr. INAIL" Variant="@variant" class="text-field">
                 <ChildContent>
                     <RadzenTextBox Name="InailId" @bind-Value=@Company.InailId />
                 </ChildContent>
                 </RadzenFormField>
             </div>
 
-            <div class="col">
+            <div class="col mt-md-0 mt-3">
                 <RadzenFormField Text="P.A.T. INAIL" Variant="@variant" class="text-field">
                     <ChildContent>
                         <RadzenTextBox Name="InailPat" @bind-Value=@Company.InailPat />
