valore condizionale azienda

--- a/ConstructionSiteLibrary/Components/Companies/FormCompanies.razor
+++ b/ConstructionSiteLibrary/Components/Companies/FormCompanies.razor
@@ -136,6 +136,6 @@
             </ChildContent>
         </RadzenFormField>
 
-        <RadzenButton ButtonType="ButtonType.Submit" Text="Salva" />
+        <RadzenButton Style="width: 200px;" ButtonType="ButtonType.Submit" Text="Salva" />
     </RadzenStack>
 </RadzenTemplateForm>
