script camera - passaggio immagine base64

--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -103,6 +103,8 @@
     private async Task TakePicture()
     {
         var img = await CameraService.OpenCamera();
+
+        Console.WriteLine(img);
        
        // StateHasChanged();
     }
