--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -13,62 +13,72 @@
     {
         <div class="marginYResponsive2">
             <div class="SectionTitleDiv">
-            <RadzenRow Style="justify-content:space-between !important;">
-                <RadzenColumn Size="1" Style="display:flex">
-                    <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;margin-top:0.5rem;"><strong>@CategoryNumber(visual.Category)</strong></RadzenText>
-                </RadzenColumn>
-                <RadzenColumn Size="10" Style="display:flex;justify-content: center;">
-                    <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center" Style="margin-left:1rem;margin-top:0.5rem;"><strong>@CategoryText(visual.Category)</strong></RadzenText>
-                </RadzenColumn>
-                <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
-                    <RadzenButton Icon="@AccordionIcon(visual)" Variant="Variant.Text" Click="@(()=>ShowQuestions(visual))" />
-                </RadzenColumn>
-            </RadzenRow>
-        </div>
-        @if (visual.ShowQuestion)
-        {
-            @foreach (var question in visual.Category.Questions)
+                <RadzenRow Style="justify-content:space-between !important;">
+                    <RadzenColumn Size="1" Style="display:flex">
+                        <RadzenText TextStyle="TextStyle.DisplayH6" Style="margin-left:1rem;margin-top:0.5rem;">
+                            <strong>@CategoryNumber(visual.Category)</strong></RadzenText>
+                    </RadzenColumn>
+                    <RadzenColumn Size="10" Style="display:flex;justify-content: center;">
+                        <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"
+                            Style="margin-left:1rem;margin-top:0.5rem;"><strong>@CategoryText(visual.Category)</strong>
+                        </RadzenText>
+                    </RadzenColumn>
+                    <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
+                        <RadzenButton Icon="@AccordionIcon(visual)" Variant="Variant.Text"
+                            Click="@(()=>ShowQuestions(visual))" />
+                    </RadzenColumn>
+                </RadzenRow>
+            </div>
+            @if (visual.ShowQuestion)
             {
+                @foreach (var question in visual.Category.Questions)
+                {
                     <div class="border paddingSezione">
-                <div class="margineDomande bordoDomanda">
-                    <div class="hstack ">
-                        <RadzenButton Icon="photo_camera" Click="@TakePicture" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonPhoto" />
-                        <RadzenText>@QuestionText(visual.Category, question.Text, question.Order)</RadzenText>
-                    </div>
-                    @foreach (var answer in question.CurrentChoices)
-                    {
-                        <div class="hstack">
-                            <div>
-                                <RadzenDropDown Value="@answer" Data=@question.Choices TValue="DocumentChoiceModel" TextProperty="Value" class="selectChoice"
-                                                Change="@(args => SelectedAnswer(args, question, question.CurrentChoices.IndexOf(answer)))" />
+                        <div class="margineDomande bordoDomanda">
+                            <div class="hstack ">
+                                <RadzenButton Icon="photo_camera" Click="@(() => TakePicture(question))"
+                                    ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonPhoto" />
+                                <RadzenText>@QuestionText(visual.Category, question.Text, question.Order)</RadzenText>
                             </div>
-                            @if (ShowDeleteChoiceButton(answer, question))
+                            @foreach (var answer in question.CurrentChoices)
                             {
-                                <div>
-                                    <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Text" class="buttonChoice"
-                                                  Click="@(()=>RemoveAnswer(question, answer))" />
+                                <div class="hstack">
+                                    <div>
+                                        <RadzenDropDown Value="@answer" Data=@question.Choices TValue="DocumentChoiceModel"
+                                            TextProperty="Value" class="selectChoice"
+                                            Change="@(args => SelectedAnswer(args, question, question.CurrentChoices.IndexOf(answer)))" />
+                                    </div>
+                                    @if (ShowDeleteChoiceButton(answer, question))
+                                    {
+                                        <div>
+                                            <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Danger" Variant="Variant.Text"
+                                                class="buttonChoice" Click="@(()=>RemoveAnswer(question, answer))" />
+                                        </div>
+                                    }
+                                    @if (ShowAddChoiceButton(answer, question))
+                                    {
+                                        <div>
+                                            <RadzenButton Icon="add" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text"
+                                                class="buttonChoice" Click="@(()=>AddAnswer(question))" />
+                                        </div>
+                                    }
                                 </div>
-                            }
-                            @if (ShowAddChoiceButton(answer, question))
-                            {
                                 <div>
-                                    <RadzenButton Icon="add" ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonChoice"
-                                                  Click="@(()=>AddAnswer(question))" />
+                                    <RadzenText TextStyle="TextStyle.Body1" onclick="@{
+                        ()=>OpenCompanyListDialog(answer)
+}">
+                                        @ReportedCompany(answer)</RadzenText>
                                 </div>
-                            }
-                        </div>
-                        <div>
-                            <RadzenText TextStyle="TextStyle.Body1" onclick="@{()=>OpenCompanyListDialog(answer)}">@ReportedCompany(answer)</RadzenText>
-                        </div>
 
-                    }
-                    <div class="row align-content-center">
-                        <RadzenButton Text="Aggiungi note" Variant="Variant.Text" Click="@(()=>OpenNoteDialog(question))" Style="width: 170px;" />
+                            }
+                            <div class="row align-content-center">
+                                <RadzenButton Text="Aggiungi note" Variant="Variant.Text" Click="@(()=>OpenNoteDialog(question))"
+                                    Style="width: 170px;" />
+                            </div>
+                        </div>
                     </div>
-                    </div>
-                </div>
+                }
             }
-        }
         </div>
     }
 </div>
@@ -81,7 +91,7 @@
     [Parameter]
     public List<CompanyModel> Companies { get; set; } = [];
     [Parameter]
-    public EventCallback OnStateChangeNotification {get; set;}
+    public EventCallback OnStateChangeNotification { get; set; }
 
 
     private List<VisualCategory> visualCategories { get; set; } = [];
@@ -96,17 +106,27 @@
         CreateVisualCategories();
     }
 
-    private async Task StateChangeNotification(){
-            await OnStateChangeNotification!.InvokeAsync();
+    private async Task StateChangeNotification()
+    {
+        await OnStateChangeNotification!.InvokeAsync();
     }
 
-    private async Task TakePicture()
+    private async Task TakePicture(DocumentQuestionModel question)
     {
         var img = await CameraService.OpenCamera();
 
-        Console.WriteLine(img);
-       
-       // StateHasChanged();
+        if (!string.IsNullOrEmpty(img))
+        {
+            question.Attachments.Add(new AttachmentModel()
+                {
+                    Name = "",
+                    Date = DateTime.Now,
+                    Image = img,
+
+                });
+        }
+
+        // StateHasChanged();
     }
 
 
@@ -141,7 +161,7 @@
     private void AddAnswer(DocumentQuestionModel question)
     {
         var index = question.CurrentChoices.Count;
-        question.CurrentChoices.Add(new(){ChoiceIndex = index});
+        question.CurrentChoices.Add(new() { ChoiceIndex = index });
     }
 
     private void RemoveAnswer(DocumentQuestionModel question, DocumentChoiceModel choice)
@@ -206,12 +226,12 @@
             };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-            {
-                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-                { "OnQuestionNoteChanged", EventCallback.Factory.Create(this, QuestionNotesChanged) },
-                { "Question", question},
+{
+//tra i parametri che invio al dialog creo un EventCallback da passare al componente
+{ "OnQuestionNoteChanged", EventCallback.Factory.Create(this, QuestionNotesChanged) },
+{ "Question", question},
 
-            };
+};
         await DialogService.OpenAsync<FormQuestionNotes>("Scrivi note", parameters: param, options: newOptions);
     }
 
@@ -227,13 +247,13 @@
             };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-            {
-                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-                { "OnCompaniesSelected", EventCallback.Factory.Create(this, SelectedCompanies) },
-                {"Choice", choice},
-                { "Companies", Companies},
+{
+//tra i parametri che invio al dialog creo un EventCallback da passare al componente
+{ "OnCompaniesSelected", EventCallback.Factory.Create(this, SelectedCompanies) },
+{"Choice", choice},
+{ "Companies", Companies},
 
-            };
+};
         await DialogService.OpenAsync<FormSelectCompany>("Seleziona aziende", parameters: param, options: newOptions);
     }
 
@@ -254,7 +274,7 @@
 
     #region Visualizzazione
 
-        private static string CategoryNumber(DocumentCategoryModel cat)
+    private static string CategoryNumber(DocumentCategoryModel cat)
     {
         return cat.Order + ".";
     }
