--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor.css
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor.css
@@ -10,6 +10,11 @@
 
 }
 
+.buttonPrint, ::deep .buttonPrint{
+    width:300px;
+    height:40px;
+}
+
 .document{
     display:flex;
     justify-content:center;
