--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
@@ -23,7 +23,7 @@ else
                         <div class="col impresaEsecutrice">
                             <RadzenRow>
                                 <RadzenLabel Text="Presente" Component="Presente" />
-                                <RadzenCheckBox Value="@company.Present" Name="Presente" />
+                                    <RadzenCheckBox Value="@company.Present" Name="Presente" TValue="bool?" Change="@(args=>AddPresent(args, company))" />
                             </RadzenRow>
                         </div>
                     </div>
@@ -62,7 +62,6 @@ else
     {
         onLoading = true;
         await base.OnInitializedAsync();
-        await LoadData();
         onLoading = false;
     }
 
@@ -71,7 +70,8 @@ else
         await base.OnParametersSetAsync();
     }
 
-    private async Task LoadData()
+    private void AddPresent(bool? isPresent, CompanyModel company)
     {
+        company.Present = isPresent.HasValue ? isPresent.Value : false;
     }
 }
