--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -219,7 +219,7 @@ else
                     <RadzenText Style="text-decoration:underline">Le firme di presa visione e accettazione di seguito fanno riferimento alle prescrizioni riportate nel verbale, riferite all'impresa di appartenenza e relativi subappaltatori.</RadzenText>
                 </div>
                 <div class="hstack">
-                    <RadzenText Text="Data:" Style="margin-right: 8px; vertical-align: middle;">Data: <strong>@StampaData(Document.SignDate)</strong></RadzenText>
+                    <RadzenText Style="margin-right: 8px; vertical-align: middle;">Data: <strong>@StampaData(Document.SignDate)</strong></RadzenText>
                 </div>
             </div>
             <div class="pdfElement">
@@ -309,8 +309,8 @@ else
         </div>
     </div>
 
-    <div class="mx-4">
-        <RadzenButton Text="Stampa" Click="StampaDocumento" />
+    <div class="m-4 d-flex justify-content-center">
+        <RadzenButton Text="Stampa" Click="StampaDocumento" class="buttonPrint"/>
     </div>
     <div class="mt-3"></div>
 }
