--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor
@@ -88,4 +88,9 @@ else
     {
         company.Present = isPresent.HasValue ? isPresent.Value : false;
     }
+
+    private void OnChange(string? args, string name)
+    {
+        
+    }
 }
