--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -20,6 +20,7 @@ else
         <QuestionNotesSection Document="@document" />
         <DocumentNoteSection Document="@document" />
         <CompaniesSignsSection Document="@document" />
+        <AttachmentsSection Categories="@document.Categories" />
     </div>
     <div class="d-flex justify-content-center">
         <RadzenButton Text="Stampa" Click="StampaDocumento" Style="width:300px;height:40px;"/>
