--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -11,28 +11,31 @@
 else
 {
     <div class="vstack documentSection">
-        <div class="marginYResponsive2">
-            <div class="row SectionTitleDiv">
-                <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"><strong>FIRME</strong></RadzenText>
-            </div>
-            <div class="paddingDescrizione marginYResponsive border">
-                <RadzenText Style="text-decoration:underline">Le firme di presa visione e accettazione di seguito fanno riferimento alle prescrizioni riportate nel verbale, riferite all'impresa di appartenenza e relativi subappaltatori.</RadzenText>
-            </div>
-            <div class="hstack">
-                <RadzenLabel Text="Data:" Component="Data" Style="margin-right: 8px; vertical-align: middle;" />
-                <RadzenDatePicker Value="@Document.SignDate" TValue="DateTime?" DateFormat="dd/MM/yyyy" Style="max-width:200px;"
-                    Change="@(args=> SaveSignDate(args))"/>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div style="margin-bottom:2rem;">
-                    </div>
-                    <div class="paddingDescrizione border my-2">
-                        <RadzenText>Il C.S.E: <strong>@Document.CSE</strong></RadzenText>
-                        @if (Document.CseSignature is not null)
+    <div class="marginYResponsive2">
+        <div class="row SectionTitleDiv">
+            <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"><strong>FIRME</strong></RadzenText>
+        </div>
+        <div class="paddingDescrizione marginYResponsive border">
+            <RadzenText Style="text-decoration:underline">Le firme di presa visione e accettazione di seguito fanno
+                riferimento alle prescrizioni riportate nel verbale, riferite all'impresa di appartenenza e relativi
+                subappaltatori.</RadzenText>
+        </div>
+        <div class="hstack">
+            <RadzenLabel Text="Data:" Component="Data" Style="margin-right: 8px; vertical-align: middle;" />
+            <RadzenDatePicker Value="@Document.SignDate" TValue="DateTime?" DateFormat="dd/MM/yyyy"
+                Style="max-width:200px;" Change="@(args=> SaveSignDate(args))" />
+        </div>
+        <div class="row">
+            <div class="col">
+                <div style="margin-bottom:2rem;">
+                </div>
+                <div class="paddingDescrizione border my-2">
+                    <RadzenText>Il C.S.E: <strong>@Document.CSE</strong></RadzenText>
+                    @if (Document.CseSignature is not null)
                         {
                             <div class="col-12 p-2 ">
-                            <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width" height="@Document.CseSignature.Height" style="max-width:100%; height:100%;" />
+                                <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width"
+                                    height="@Document.CseSignature.Height" style="max-width:100%; height:100%;" />
                             </div>
                         }
                         else
@@ -56,7 +59,8 @@ else
                                 @if (reportedCompany.Sign is not null)
                                 {
                                     <div class="col-12 p-2 ">
-                                        <img src="@reportedCompany.Sign.Image" width="@reportedCompany.Sign.Width" height="@reportedCompany.Sign.Height" style="max-width:100%; height:100%;" />
+                                        <img src="@reportedCompany.Sign.Image" width="@reportedCompany.Sign.Width"
+                                            height="@reportedCompany.Sign.Height" style="max-width:100%; height:100%;" />
                                     </div>
                                 }
                                 else
@@ -69,7 +73,10 @@ else
                                     <RadzenText TextStyle="TextStyle.Caption" class="mb-0">Quesiti contestati:</RadzenText>
                                     @foreach (var questionIds in reportedCompany.ReportedQuestions)
                                     {
-                                        <RadzenButton Variant="Variant.Text" Size="ButtonSize.Small" ButtonStyle="ButtonStyle.Info">@questionIds.MarkByOrder()</RadzenButton>
+                                        <RadzenButton Variant="Variant.Text" Size="ButtonSize.Small" ButtonStyle="ButtonStyle.Info" 
+                                          Text="@questionIds.MarkByOrder()"
+                                            Click="@(() => OpenContestedQuestionsDialog(questionIds))"
+                                            />
                                     }
                                 </div>
                             </div>
@@ -123,25 +130,26 @@ else
                     foreach (var companyId in currentChoice.ReportedCompanyIds)
                     {
                         var reportedCompany = CompaniesQuestionsReported.Where(x => x.Company.Id == companyId).First();
-                        reportedCompany.ReportedQuestions.Add(new CateogoryQuestionIds()
-                        {
-                            CategoryId = category.Id,
-                            CategoryOrder = category.Order,
-                            QuestionId = question.Id,
-                            QuestionOrder = question.Order,
-                        });
+                        reportedCompany.ReportedQuestions.Add(new CategoryQuestionIds()
+                            {
+                                //Esempio domanda 3.12
+                                CategoryId = category.Id, 
+                                CategoryOrder = category.Order, //3 
+                                QuestionId = question.Id,
+                                QuestionOrder = question.Order, //12 
+                            });
 
                         var cs = Document.Signatures.Where(x => x.CompanyId == companyId).FirstOrDefault();
-                        if(cs is not null)
+                        if (cs is not null)
                         {
                             cs.ReporteQuestionsIds.Add(question.Id);
                         }
                         else
                         {
-                            cs = new ()
-                            {
-                                CompanyId = reportedCompany.Company.Id,
-                            };
+                            cs = new()
+                                {
+                                    CompanyId = reportedCompany.Company.Id,
+                                };
                             cs.ReporteQuestionsIds.Add(question.Id);
                             Document.Signatures.Add(cs);
                         }
@@ -156,7 +164,7 @@ else
         Document.SignDate = date;
     }
 
-    #region Firma 
+    #region Firma
 
     private async Task OpenSignaturePad(object? obj)
     {
@@ -174,17 +182,37 @@ else
             };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-        {
-            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-            { "OnSavedSignature", EventCallback.Factory.Create<Signature>(this, ShowSignature) },
-            { "ExtraObject" , obj },
-            { "CanvasHeight" , canvasHeight },
-            { "CanvasWidth" , canvasWidth },
-        };
+{
+//tra i parametri che invio al dialog creo un EventCallback da passare al componente
+{ "OnSavedSignature", EventCallback.Factory.Create<Signature>(this, ShowSignature) },
+{ "ExtraObject" , obj },
+{ "CanvasHeight" , canvasHeight },
+{ "CanvasWidth" , canvasWidth },
+};
         await DialogService.OpenAsync<SignatureComponent>("Firma", parameters: param, options: newOptions);
 
     }
 
+    private async Task OpenContestedQuestionsDialog(CategoryQuestionIds qr)
+    {
+        var width = screenComponent.GetScreenSize();
+
+        // creo uno style aggiuntivo da inviare al componente caricato con il popup come options
+        var additionalStyle = $"min-height:fit-content;height:fit-content;width:{width}px;max-width:600px";
+        var newOptions = new DialogOptions
+            {
+                Style = additionalStyle
+            };
+        string q = "";
+    var cat = Document.Categories.Where(x => x.Id == qr.CategoryId).SingleOrDefault();
+    if (cat is not null) {
+        q = cat.Questions.Where(x => x.Id == qr.QuestionId).Select( x => x.Text).SingleOrDefault() ?? "";
+    }
+        //creo parametri da inviare al componente caricato con il popup
+        var param = new Dictionary<string, object>
+            {{ "QuestionText", q },};
+        await DialogService.OpenAsync<ContestedQuestionDialog>("Testo della domanda:", parameters: param, options: newOptions);
+    }
 
     private void ShowSignature(Signature signature)
     {
@@ -196,16 +224,16 @@ else
             currentCompany.Sign = signature;
             var compSign = Document.Signatures.Where(x => x.CompanyId == currentCompany.Company.Id).SingleOrDefault();
             //non esiste una firma per questa azienda la creo nuova
-            if(compSign is null)
+            if (compSign is null)
             {
                 compSign = new()
-                {
-                    CompanyId = currentCompany.Company.Id,
-                    ReporteQuestionsIds = currentCompany.ReportedQuestions.Select(x => x.QuestionId).ToList(),
-                    Sign = currentCompany.Sign.Image,
-                    Width = currentCompany.Sign.Width,
-                    Height = currentCompany.Sign.Height
-                };
+                    {
+                        CompanyId = currentCompany.Company.Id,
+                        ReporteQuestionsIds = currentCompany.ReportedQuestions.Select(x => x.QuestionId).ToList(),
+                        Sign = currentCompany.Sign.Image,
+                        Width = currentCompany.Sign.Width,
+                        Height = currentCompany.Sign.Height
+                    };
                 Document.Signatures.Add(compSign);
             }
             //aggiorno la firma precedente
@@ -230,20 +258,20 @@ else
 
     #endregion
 
-    #region Classi interne 
+    #region Classi interne
 
     class CompanyQuestionsReported
     {
         public CompanyModel Company = new();
 
-        public List<CateogoryQuestionIds> ReportedQuestions = [];
+        public List<CategoryQuestionIds> ReportedQuestions = [];
 
         public Signature? Sign;
 
 
     }
 
-    class CateogoryQuestionIds
+    class CategoryQuestionIds
     {
         public int CategoryId;
         public int CategoryOrder;
