--- a/ConstructionSiteLibrary/Components/Documents/Compilation/AttachmentsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/AttachmentsSection.razor
@@ -43,7 +43,7 @@
                                 <RadzenRow>
                                     @foreach (var attach in question.Attachments)
                                     {
-                                        <RadzenImage Path="@attach.Image" />
+                                        <RadzenImage Path="@attach.Image" Style="width:8rem;" />
                                     }
                                 </RadzenRow>
                             </div>
