--- a/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/DocumentCompilation.razor
@@ -27,8 +27,8 @@ else
         <RadzenButton Icon="save" Text="Salva" Click="SalvaDocumento" Style="width: 200px;height:40px;" IsBusy="@onSaving" />
         <div class="mx-2"></div>
         <RadzenButton Icon="print" Text="Stampa" Click="StampaDocumento" Style="width:200px;height:40px;"/>
-
     </div>
+    <div class="mt-3"></div>
 }
 
 @code {
