--- a/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/QuestionsSection.razor
@@ -21,13 +21,13 @@
                     </RadzenColumn>
                     <RadzenColumn Size="10" Style="display:flex;justify-content: center;">
                         <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center"
-                                    Style="margin-left:1rem;margin-top:0.5rem;">
+                            Style="margin-left:1rem;margin-top:0.5rem;">
                             <strong>@DocumentCompilationUtils.CategoryText(visual.Category)</strong>
                         </RadzenText>
                     </RadzenColumn>
                     <RadzenColumn Size="1" Style="display:flex;justify-content:end;">
                         <RadzenButton Icon="@DocumentCompilationUtils.AccordionIcon(visual)" Variant="Variant.Text"
-                                      Click="@(()=>DocumentCompilationUtils.ShowQuestions(visual))" />
+                            Click="@(()=>DocumentCompilationUtils.ShowQuestions(visual))" />
                     </RadzenColumn>
                 </RadzenRow>
             </div>
@@ -38,9 +38,16 @@
                     <div class="border paddingSezione">
                         <div class="margineDomande bordoDomanda">
                             <div class="hstack ">
-                                <RadzenButton Icon="photo_camera" Click="@(() => TakePicture(question))"
-                                    ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonPhoto" />
-                                <RadzenText>@DocumentCompilationUtils.QuestionText(visual.Category, question.Text, question.Order)</RadzenText>
+                                <RadzenSplitButton Click=@(args => SelectAttachSource(args, question)) Icon="photo_camera" class="buttonPhoto">
+                                    <ChildContent>
+                                        <RadzenSplitButtonItem Text="Fotocamera" Value="1" Icon="photo_camera" />
+                                        <RadzenSplitButtonItem Text="Documenti" Value="2" Icon="folder" />
+                                    </ChildContent>
+                                </RadzenSplitButton>
+                                @*<RadzenButton Icon="photo_camera" Click="@(() => TakePicture(question))"
+                                    ButtonStyle="ButtonStyle.Primary" Variant="Variant.Text" class="buttonPhoto" />*@
+                                <RadzenText>@DocumentCompilationUtils.QuestionText(visual.Category, question.Text, question.Order)
+                                </RadzenText>
                             </div>
                             @foreach (var answer in question.CurrentChoices)
                             {
@@ -66,7 +73,9 @@
                                     }
                                 </div>
                                 <div>
-                                    <RadzenText TextStyle="TextStyle.Body1" onclick="@{()=>OpenCompanyListDialog(answer)}">
+                                    <RadzenText TextStyle="TextStyle.Body1" onclick="@{
+                        ()=>OpenCompanyListDialog(answer)
+}">
                                         @ReportedCompany(answer)</RadzenText>
                                 </div>
                             }
@@ -105,8 +114,28 @@
         await OnStateChangeNotification!.InvokeAsync();
     }
 
+    private void SelectAttachSource(RadzenSplitButtonItem item, DocumentQuestionModel question)
+    {
+        if(item is null)
+        {
+            TakePicture(question);
+        }
+        else
+        {
+            if(item.Value.Equals("1"))
+            {
+                TakePicture(question);
+            }
+            else
+            {
+                //apro i documenti
+            }
+        }
+    }
+
     private async Task TakePicture(DocumentQuestionModel question)
     {
+
         var img = await CameraService.OpenCamera();
 
         if (!string.IsNullOrEmpty(img))
@@ -186,9 +215,10 @@
         if (cTemp is not null)
         {
             cTemp.ChoiceIndex = index;
-            if (cTemp.Id != question.CurrentChoices[index].Id ){
-            var answer = cTemp.Clone();
-            question.CurrentChoices[index] = answer;
+            if (cTemp.Id != question.CurrentChoices[index].Id)
+            {
+                var answer = cTemp.Clone();
+                question.CurrentChoices[index] = answer;
             }
 
             if (question.CurrentChoices[index].Reportable)
@@ -214,11 +244,11 @@
             };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-        {
-            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-            { "OnQuestionNoteChanged", EventCallback.Factory.Create(this, QuestionNotesChanged) },
-            { "Question", question},
-        };
+{
+//tra i parametri che invio al dialog creo un EventCallback da passare al componente
+{ "OnQuestionNoteChanged", EventCallback.Factory.Create(this, QuestionNotesChanged) },
+{ "Question", question},
+};
         await DialogService.OpenAsync<FormQuestionNote>("Scrivi note", parameters: param, options: newOptions);
     }
 
@@ -232,12 +262,12 @@
             { Style = additionalStyle };
         //creo parametri da inviare al componente caricato con il popup
         var param = new Dictionary<string, object>
-        {
-                //tra i parametri che invio al dialog creo un EventCallback da passare al componente
-                { "OnCompaniesSelected", EventCallback.Factory.Create(this, SelectedCompanies) },
-                { "Choice", choice },
-                { "Companies", Companies },
-        };
+                        {
+                            //tra i parametri che invio al dialog creo un EventCallback da passare al componente
+                            { "OnCompaniesSelected", EventCallback.Factory.Create(this, SelectedCompanies) },
+                            { "Choice", choice },
+                            { "Companies", Companies },
+                        };
         await DialogService.OpenAsync<FormSelectCompany>("Seleziona aziende", parameters: param, options: newOptions);
     }
 
