--- a/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/ReportConstructorSiteDataSection.razor
@@ -12,7 +12,7 @@
 else
 {
     <div class="">
-        <div class="vstack px-4">
+        <div class="vstackd ocumentSection">
             @* INTRO DOCUMENTO *@
             <div class=" my-4">
                 <div class="row SectionTitleDiv">
@@ -22,7 +22,7 @@ else
                 </div>
                 <div class="my-4 paddingSezione">
                     <div class="row my-2">
-                        <RadzenTextArea @bind-Value="@Document.Description" class="w-100" />
+                        <RadzenTextArea @bind-Value="@Document.Description" class="w-100" Style="height:fit-content;" />
                     </div>
                 </div>
                 <div class="border my-4 paddingSezione">
