--- a/ConstructionSiteLibrary/Components/Documents/Compilation/AttachmentsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/AttachmentsSection.razor
@@ -3,42 +3,46 @@
 
 @inject DialogService DialogService
 
-<ScreenComponent @ref="screenComponent" />
+@if (visualCategories.Count > 0)
+{
+    <ScreenComponent @ref="screenComponent" />
 
-<div class="vstack documentSection">
-    <div class="row SectionTitleDiv">
-        <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center">
-            <strong>
-                @DocumentCompilationUtils.Attachment
-            </strong>
-        </RadzenText>
-    </div>
-    @foreach (var cat in visualCategories)
-    {
-        foreach (var elem in cat.Category.Questions)
+    <div class="vstack documentSection">
+        <div class="row SectionTitleDiv">
+            <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center">
+                <strong>
+                    @DocumentCompilationUtils.Attachment
+                </strong>
+            </RadzenText>
+        </div>
+        @foreach (var cat in visualCategories)
         {
-            if (elem.Attachments.Count > 0)
+            foreach (var elem in cat.Category.Questions)
             {
-                <div class="paddingSezione">
-                    <RadzenRow JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Start" Gap="0">
-                        <RadzenColumn Size="1" class="rz-text-align-center paddingYResponsive">
-                            <RadzenText TextStyle="TextStyle.H6">@DocumentCompilationUtils.QuestionNumber(cat.Category, elem.Order)</RadzenText>
-                        </RadzenColumn>
-                        <RadzenColumn>
-                            <RadzenRow>
-                                @foreach (var attach in elem.Attachments)
-                                {
-                                    <RadzenImage Path="@attach.Image" Style="width:8rem;" />
-                                }
-                            </RadzenRow>
-                        </RadzenColumn>
-                    </RadzenRow>
-                </div>
+                if (elem.Attachments.Count > 0)
+                {
+                    <div class="paddingSezione">
+                        <RadzenRow JustifyContent="JustifyContent.Center" AlignItems="AlignItems.Start" Gap="0">
+                            <RadzenColumn Size="1" class="rz-text-align-center paddingYResponsive">
+                                <RadzenText TextStyle="TextStyle.H6">@DocumentCompilationUtils.QuestionNumber(cat.Category, elem.Order)</RadzenText>
+                            </RadzenColumn>
+                            <RadzenColumn>
+                                <RadzenRow>
+                                    @foreach (var attach in elem.Attachments)
+                                    {
+                                        <RadzenImage Path="@attach.Image" Style="width:8rem;" />
+                                    }
+                                </RadzenRow>
+                            </RadzenColumn>
+                        </RadzenRow>
+                    </div>
+                }
             }
         }
-    }
 
-</div>
+    </div>
+}
+
 
 @code {
 
