--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor.css
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesPresentSection.razor.css
@@ -7,6 +7,11 @@
     margin: 0rem;
 }
 
+.SectionTitle,
+::deep .SectionTitle {
+    margin: 0px;
+}
+
 .documentSection {
     padding-right: 1.5rem !important;
     padding-left: 1.5rem !important;
