--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -14,7 +14,7 @@ else
     <div class="vstack documentSection">
     <div class="marginYResponsive2">
         <div class="row SectionTitleDiv">
-            <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center">
+            <RadzenText TextStyle="TextStyle.DisplayH6" TextAlign="TextAlign.Center" class="SectionTitle">
                 <strong>
                     @DocumentCompilationUtils.DocumentSignatures
                 </strong>
@@ -31,7 +31,7 @@ else
                 Style="max-width:200px;" Change="@(args=> SaveSignDate(args))" />
         </div>
         <div class="row">
-            <div class="col">
+                <div class="col-12 col-md-6 my-2">
                 <div style="margin-bottom:2rem;">
                 </div>
                 <div class="paddingDescrizione border my-2">
@@ -40,7 +40,7 @@ else
                         {
                             <div class="col-12 p-2 ">
                                 <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width"
-                                    height="@Document.CseSignature.Height" style="max-width:100%; height:100%;" />
+                                     height="@Document.CseSignature.Height" style="max-width:100%; height:100%;" />
                             </div>
                         }
                         else
@@ -51,9 +51,9 @@ else
                         <RadzenButton Text="Firma" Click="@(() => OpenSignaturePad(null))" class="mt-2" />
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 my-2">
                     <div class="mb-1">
-                        <RadzenText Style="text-decoration:underline">Per presa visione e accettazione</RadzenText>
+                        <RadzenText Style="text-decoration:underline">Per presa visione e accettazione:</RadzenText>
                     </div>
                     @foreach (var reportedCompany in CompaniesQuestionsReported)
                     {
@@ -65,7 +65,7 @@ else
                                 {
                                     <div class="col-12 p-2 ">
                                         <img src="@reportedCompany.Sign.Image" width="@reportedCompany.Sign.Width"
-                                            height="@reportedCompany.Sign.Height" style="max-width:100%; height:100%;" />
+                                             height="@reportedCompany.Sign.Height" style="max-width:100%; height:100%;" />
                                     </div>
                                 }
                                 else
