--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -23,18 +23,18 @@ else
                 </div>
                 <div class="border paddingSezione">
                     <div class="row my-2">
-                        <RadzenText>@DocumentCompilationUtils.PrintDocumentField(Document.Description)</RadzenText>
+                        <RadzenText>@DocumentCompilationUtils.PrintDocumentField(Document?.Description)</RadzenText>
                     </div>
                 </div>
                 <div class="border paddingSezione">
                     <div class=" row my-2">
                         <div class="col-6">
-                            <RadzenText>Il C.S.E.: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.CSE)</strong></RadzenText>
+                            <RadzenText>Il C.S.E.: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.CSE)</strong></RadzenText>
                         </div>
                         <div class="col-6">
                             <div class="row">
                                 <div class="col-8">
-                                    <RadzenText>Data sopralluogo: <strong>@StampaData(Document.CompilationDate)</strong></RadzenText>
+                                    <RadzenText>Data sopralluogo: <strong>@StampaData(Document?.CompilationDate)</strong></RadzenText>
                                 </div>
                                 <div class="col-4">
                                     <RadzenText>Ora: <strong>@StampaOra()</strong></RadzenText>
@@ -62,31 +62,31 @@ else
                             <RadzenText>Committente: <strong>@DocumentCompilationUtils.PrintDocumentField("")</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Lavori di: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.JobDescription)</strong></RadzenText>
+                            <RadzenText>Lavori di: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.JobDescription)</strong></RadzenText>
                         </div>
                     </div>
                     <div class="row my-2">
                         <div class="col">
-                            <RadzenText>Indirizzo cantiere: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.Address)</strong></RadzenText>
+                            <RadzenText>Indirizzo cantiere: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.Address)</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Inizio lavori: <strong>@StampaData(Document.ConstructorSite.StartDate)</strong></RadzenText>
-                        </div>
-                    </div>
-                    <div class="row my-2">
-                        <div class="col">
-                            <RadzenText>Notifica preliminare inizio cantiere del: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.PreliminaryNotificationStartDate)</strong></RadzenText>
-                        </div>
-                        <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.IdSico)</strong></RadzenText>
+                            <RadzenText>Inizio lavori: <strong>@StampaData(Document?.ConstructorSite.StartDate)</strong></RadzenText>
                         </div>
                     </div>
                     <div class="row my-2">
                         <div class="col">
-                            <RadzenText> Notifica preliminare in corso: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.PreliminaryNotificationInProgress)</strong></RadzenText>
+                            <RadzenText>Notifica preliminare inizio cantiere del: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.PreliminaryNotificationStartDate)</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentCompilationUtils.PrintDocumentField(Document.ConstructorSite.IdSicoInProgress)</strong></RadzenText>
+                            <RadzenText>Id. SICO: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.IdSico)</strong></RadzenText>
+                        </div>
+                    </div>
+                    <div class="row my-2">
+                        <div class="col">
+                            <RadzenText> Notifica preliminare in corso: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.PreliminaryNotificationInProgress)</strong></RadzenText>
+                        </div>
+                        <div class="col">
+                            <RadzenText>Id. SICO: <strong>@DocumentCompilationUtils.PrintDocumentField(Document?.ConstructorSite.IdSicoInProgress)</strong></RadzenText>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@ else
                     </RadzenText>
                 </div>
             </div>
-            @foreach (var company in Document.Companies)
+            @foreach (var company in Document?.Companies)
             {
                 <div class="pdfElement">
                     <div class="border paddingSezione">
